--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -20,6 +20,24 @@
   }
 }
 
+.actions {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  align-items: center;
+
+  .locale {
+    margin: 0;
+    font-family: var(--heading-font);
+    color: var(--light-b);
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: 12px;
+    cursor: pointer;
+    user-select: none;
+  }
+}
+
 .menuToggle {
   display: flex;
   flex-direction: column;
