--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -17,9 +17,24 @@
 
 .featuredImage {
   flex: 1;
+  position: relative;
+  overflow: hidden;
+
+  .before {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0;
+    background-color: var(--light-1);
+    transform: scaleY(0);
+    transform-origin: top;
+    opacity: 0.1;
+  }
 
   img {
     width: 100%;
+    transform-origin: top;
   }
 }
 
