--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,6 +24,7 @@ body {
   background-color: var(--dark-b);
   font-family: var(--body-font);
   color: var(--light-1);
+  font-variant-numeric: lining-nums;
 }
 
 ::selection {
