--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,6 +1,13 @@
+@use "mixins" as *;
+
 .container {
-  padding-block: 10rem;
-  padding-inline: 4rem;
+  padding-block: 5rem;
+  padding-inline: 1.5rem;
+
+  @include mq(lg) {
+    padding-block: 10rem;
+    padding-inline: 4rem;
+  }
 }
 
 .main {
@@ -11,17 +18,32 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 7rem;
+  gap: 4rem;
+
+  @include mq(lg) {
+    gap: 7rem;
+  }
 }
 
 .row {
   display: flex;
-  gap: 2.5rem;
-  margin-top: 3.5rem;
+  gap: 1.5rem;
+  margin-top: 2.5rem;
+  flex-direction: column;
+
+  @include mq(lg) {
+    gap: 2.5rem;
+    margin-top: 3.5rem;
+    flex-direction: row;
+  }
 }
 
 .githubProjects {
   display: flex;
   flex-wrap: wrap;
-  gap: 2.5rem;
+  gap: 1.5rem;
+
+  @include mq(lg) {
+    gap: 2.5rem;
+  }
 }
