--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -90,23 +90,23 @@ h6 {
 
 h1,
 .h1 {
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 1.4rem;
+  line-height: 1;
 
   @include mq(lg) {
     font-size: 2.5rem;
-    line-height: 3rem;
+    line-height: 1;
   }
 }
 
 h2,
 .h2 {
-  font-size: 1.25rem;
-  line-height: 1.5rem;
+  font-size: 1.2rem;
+  line-height: 1;
 
   @include mq(lg) {
     font-size: 2rem;
-    line-height: 38px;
+    line-height: 1;
   }
 }
 
