--- a/styles/Card.module.scss
+++ b/styles/Card.module.scss
@@ -5,7 +5,7 @@
   border: 1px solid var(--dark-1);
   max-width: 560px;
   position: relative;
-  transition: var(--transition);
+  transition: border var(--transition);
 
   @include mq(lg) {
     padding: 3.5rem 2rem;
