--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   flex-direction: column;
   gap: 0.5rem;
-  transition: var(--transition);
+  transition: border var(--transition);
 
   @include mq-max(lg) {
     aspect-ratio: 16 / 7;
